Change bundle name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oodle/email-parse",
+    "name": "mmucklo/email-parse",
     "type": "library",
     "description": "email-parse a (reasonably) RFC822 / RF2822-compliant library for parsing multiple (and single) email addresses",
     "license": "TBD",
@@ -7,7 +7,7 @@
     "authors": [
 	{
 	    "name": "Matthew J. Mucklo",
-	    "email": "mmucklo@corp.oodle.com"
+	    "email": "mmucklo@gmail.com"
 	}
     ],
     "require-dev": {
