--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
 	}
     ],
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "symfony/yaml": ">=2.3,<=2.4"
+        "phpunit/phpunit": "4.7.*",
+	"fabpot/php-cs-fixer": "dev-master",
+        "symfony/yaml": ">=2.7,<=2.9"
     },
     "require": {
         "php": ">=5.3.17",
