update build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: php
 php:
     - 5.3
     - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
 
 before_script:
-    - COMPOSER_ROOT_VERSION=dev-master composer --prefer-source --dev install
+    - COMPOSER_ROOT_VERSION=dev-master composer --prefer-source install
 
-script: vendor/phpunit/phpunit/composer/bin/phpunit --configuration phpunit.xml-dist
+script: vendor/phpunit/phpunit/phpunit --configuration phpunit.xml-dist
