--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=5.4.0",
     "true/punycode": "~2.0",
-    "psr/log": "1.0.0",
+    "psr/log": "~1.0",
     "zendframework/zend-validator" : "*"
   },
   "autoload": {
