Adding in composer.lock, setting up test coverage, and updating phpunit and libs, psr2 cleanup, and more

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-.php_cs.cache
+# standard
 composer.phar
-composer.lock
+
+# emacs
 *~
 \#*#
 .\#*
+
+# composer
 vendor/*
+
+# phpstorm
 .idea
+
+# bin
+bin/php-cs-fixer
+bin/phpunit
+
+# Other
+.php_cs.cache
+.coverage
