--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,3 +4,11 @@ checks:
     php:
         code_rating: true
         duplication: true
+build:
+    tests:
+        override:
+            -
+                command: 'bin/phpunit --coverage-clover=.coverage'
+                coverage:
+                    file: '.coverage'
+                    format: 'clover'
