--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
     - composer self-update
     - composer install
 
-script: vendor/phpunit/phpunit/phpunit --configuration phpunit.xml-dist
+script: bin/phpunit 
