--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^5.7.0",
-    "friendsofphp/php-cs-fixer": "dev-master",
-    "symfony/yaml": ">=2.7,<=2.9"
+    "phpunit/phpunit": "^7",
+    "friendsofphp/php-cs-fixer": "^3.0|^2.0",
+    "symfony/yaml": ">=4"
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.1",
     "true/punycode": "~2.0",
     "psr/log": "~1.0",
     "zendframework/zend-validator" : ">=2.0,<=3.0"
