--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^7",
+    "phpunit/phpunit": "^7|^8",
     "friendsofphp/php-cs-fixer": "^3.0|^2.0",
     "symfony/yaml": ">=4"
   },
@@ -27,7 +27,6 @@
     "php": ">=7.1",
     "true/punycode": "~2.0",
     "psr/log": "~1.0",
-    "laminas/laminas-validator": "^2.13",
     "ext-mbstring": "*"
   },
   "autoload": {
