--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,17 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^7",
+    "phpunit/phpunit": "^7|^8|^9",
     "friendsofphp/php-cs-fixer": "^3.0|^2.0",
     "symfony/yaml": ">=4"
   },
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.1|^8.0",
     "true/punycode": "~2.0",
-    "psr/log": "~1.0",
+    "psr/log": "~1.0|~2.0|~3.0",
     "laminas/laminas-validator": "^2.13",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "symfony/polyfill-intl-idn": "^1.27"
   },
   "autoload": {
     "psr-4": {
