--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@ composer.lock
 # composer
 vendor/*
 
+# phpunit
+/.phpunit.result.cache
+
 # bin
+/bin
 bin/php-cs-fixer
 bin/phpunit
 bin/yaml-lint
