--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,16 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^7",
-    "friendsofphp/php-cs-fixer": "^3.0|^2.0",
+    "phpunit/phpunit": ">=7",
+    "friendsofphp/php-cs-fixer": ">=2.0",
     "symfony/yaml": ">=4"
   },
   "require": {
     "php": ">=7.1",
-    "true/punycode": "~2.0",
-    "psr/log": "~1.0",
+    "psr/log": ">=1.0",
     "laminas/laminas-validator": "^2.13",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "symfony/polyfill-intl-idn": "*"
   },
   "autoload": {
     "psr-4": {
