--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,7 +9,7 @@ build:
     tests:
         override:
             -
-                command: 'bin/phpunit --coverage-clover=.coverage'
+                command: 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover=.coverage'
                 coverage:
                     file: '.coverage'
                     format: 'clover'
