--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,10 +5,11 @@ checks:
         code_rating: true
         duplication: true
 build:
+    image: default-jammy
     tests:
         override:
             -
-                command: 'bin/phpunit --coverage-clover=.coverage'
+                command: 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover=.coverage'
                 coverage:
                     file: '.coverage'
                     format: 'clover'
