--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,19 +16,19 @@ build:
         php82:
             environment:
                 php:
-                    version: 8.2.0
+                    version: 8.2
             tests:
                 override:
                     -
-                        command: 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover=.coverage'
+                        command: 'XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover=.coverage'
                         coverage:
                             file: '.coverage'
                             format: 'clover'
         php83:
             environment:
                 php:
-                    version: 8.3.0
+                    version: 8.3
             tests:
                 override:
                     -
-                        command: 'bin/phpunit'
+                        command: 'vendor/bin/phpunit'
