PHP 8.1 support, plus github actions support, plus php-cs-fixer, initialize phpstan

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,11 @@ vendor/*
 # bin
 bin/*
 
+# cache files
 *.cache
+.phpunit.result.cache
+
+# coverage reports
+coverage/
+coverage.xml
+.phpunit.cache/
