--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run test suite
-        run: vendor/bin/phpunit
+        run: bin/phpunit
 
   coverage:
     name: Code Coverage
@@ -69,7 +69,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run test suite with coverage
-        run: vendor/bin/phpunit --coverage-clover=coverage.xml --coverage-text
+        run: bin/phpunit --coverage-clover=coverage.xml --coverage-text
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -97,7 +97,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run PHP CS Fixer
-        run: vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
+        run: bin/php-cs-fixer fix --dry-run --diff --verbose
 
   static-analysis:
     name: Static Analysis (PHPStan)
@@ -118,4 +118,4 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run PHPStan
-        run: vendor/bin/phpstan analyse --error-format=github
+        run: bin/phpstan analyse --error-format=github
