Fix PHP 8.1 compatibility: Allow symfony/yaml ^6.4
Symfony/yaml 7.x requires PHP >=8.2, but this project needs to support PHP 8.1.
Updated to allow symfony/yaml ^6.4 (requires PHP >=8.1) or ^7.2.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "friendsofphp/php-cs-fixer": "^3.65",
     "phpstan/phpstan": "^2.0",
     "phpunit/phpunit": "^9.6",
-    "symfony/yaml": "^7.2"
+    "symfony/yaml": "^6.4|^7.2"
   },
   "require": {
     "php": "^8.1",
