PHP 8.1 support, plus github actions support, plus php-cs-fixer, init… (#39)
* PHP 8.1 support, plus github actions support, plus php-cs-fixer, initialize phpstan

* Fix GitHub Actions: Update binary paths from vendor/bin to bin

* Fix operator precedence issue in Parse.php line 621

Add parentheses to properly group OR conditions with AND operator.
This fixes potential logic errors and ensures PHP 8.1+ compatibility.

* Fix PHP 8.1 compatibility: Allow symfony/yaml ^6.4

Symfony/yaml 7.x requires PHP >=8.2, but this project needs to support PHP 8.1.
Updated to allow symfony/yaml ^6.4 (requires PHP >=8.1) or ^7.2.

* Add PHP 8.1 compatibility polyfill for FILTER_FLAG_GLOBAL_RANGE

FILTER_FLAG_GLOBAL_RANGE constant was introduced in PHP 8.2.
Added a private class constant polyfill to support PHP 8.1.

* Add PHP 8.1 compatibility for FILTER_FLAG_GLOBAL_RANGE

FILTER_FLAG_GLOBAL_RANGE constant was introduced in PHP 8.2.
Created validateIpGlobalRange() method that:
- Uses FILTER_FLAG_GLOBAL_RANGE on PHP 8.2+
- Falls back to FILTER_FLAG_NO_PRIV_RANGE | FILTER_FLAG_NO_RES_RANGE on PHP 8.1

This provides equivalent functionality across all supported PHP versions.

* special casing for PHP 8.1 backwards compat

* remove var_dump

* add more tests for invalid IP ranges

* fix test

* update rules

--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
   ],
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.65",
+    "phpstan/phpstan": "^2.0",
     "phpunit/phpunit": "^9.6",
-    "symfony/yaml": "^7.2"
+    "symfony/yaml": "^6.4|^7.2"
   },
   "require": {
-    "php": "^8.2",
+    "php": "^8.1",
     "ext-mbstring": "*",
     "psr/log": "^3.0",
     "symfony/polyfill-intl-idn": "^1.31"
@@ -41,5 +42,17 @@
     "psr-4": {
       "Email\\Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "test": "phpunit",
+    "test:coverage": "phpunit --coverage-html coverage",
+    "cs:check": "php-cs-fixer fix --dry-run --diff",
+    "cs:fix": "php-cs-fixer fix",
+    "stan": "phpstan analyse",
+    "ci": [
+      "@cs:check",
+      "@stan",
+      "@test"
+    ]
   }
 }
