--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,22 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.65",
     "phpstan/phpstan": "^2.0",
-    "phpunit/phpunit": "^9.6",
-    "symfony/yaml": "^6.4|^7.2"
+    "phpunit/phpunit": "^7.5|^8.0|^9.0",
+    "symfony/yaml": "^3.4|^4.0|^5.0|^6.0|^7.0"
   },
   "require": {
-    "php": "^8.1",
+    "php": "^7.1|^8.0",
     "ext-mbstring": "*",
-    "psr/log": "^3.0",
-    "symfony/polyfill-intl-idn": "^1.31"
+    "psr/log": "^1.0|^2.0|^3.0",
+    "symfony/polyfill-intl-idn": "^1.10"
   },
   "autoload": {
     "psr-4": {
       "Email\\": "src/"
-    }
+    },
+    "files": [
+      "src/polyfills.php"
+    ]
   },
   "config": {
     "bin-dir": "bin"
