Remove incompatible dev dependencies before installing on older PHP versions
- Remove phpstan and php-cs-fixer from dev dependencies before installing
- These tools require PHP 7.4+ and aren't needed for running tests
- Allows tests to run on PHP 7.1-7.3 with appropriate PHPUnit versions
- Static analysis and code style checks still run separately on PHP 8.2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,9 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --ignore-platform-req=php+
+        run: |
+          composer remove --dev phpstan/phpstan friendsofphp/php-cs-fixer --no-update
+          composer install --prefer-dist --no-progress
 
       - name: Run test suite
         run: bin/phpunit
