--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,6 +6,11 @@ checks:
         duplication: true
 build:
     image: default-jammy
+    nodes:
+        analysis:
+            environment:
+                php:
+                    version: 8.2
     tests:
         override:
             -
